--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "react-movies",
   "private": true,
+  "homepage": "https://DenisShagi.github.io/React-movies",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deplot": "gh-pages -d build"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -22,6 +25,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "vite": "^6.0.5"
   }
